<resources>
    <string name="app_name">Panchayat Election</string>

    <!-- Fragment titles-->
    <string name="fragment_home">Home</string>
    <string name="fragment_faves">Favorites</string>
    <string name="fragment_notifications">Videos</string>
    <string name="fragment_profile">Profile</string>

    <!-- Menu labels-->
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>30
    <string name="menu_delete">Delete</string>
    <string name="menu_report">Report</string>
    <string name="menu_post_meme">Share post</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_add_memes">Add Post</string>

    <!-- TextView labels-->
    <string name="label_member">Already have an account?</string>
    <string name="label_not_member">Not a member yet?</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_register">Register</string>
    <string name="label_sign_up">Create Account</string>
    <string name="label_agree_to_terms">I accept the</string>
    <string name="label_terms">Terms &amp; Conditions</string>
    <string name="label_username">Username</string>
    <string name="label_bio">About Me</string>
    <string name="label_rate_app">Rate App</string>
    <string name="label_share_app">Share App</string>
    <string name="label_feedback">Send Feedback</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_more_apps">More Apps</string>
    <string name="label_reports">Reports</string>
    <string name="label_post_memes">Post Opinion</string>
    <string name="label_logout">Log Out</string>
    <string name="label_new_user">Hello there. I\'m here for the My Panchayat too :)</string>
    <string name="label_play_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="label_invite_body">Ssup fam! Check out these fresh views!!</string>
    <string name="label_dev_id">https://play.google.com/store/apps/developer?id=Gelos+Technologies</string>
    <string name="label_memes">Opinions</string>
    <string name="label_followers">Followers</string>
    <string name="label_following">Following</string>

    <!-- Buttons labels-->
    <string name="button_login">Login</string>
    <string name="button_update_profile">Update Profile</string>
    <string name="button_follow">Follow</string>
    <string name="button_post">Post</string>
    <string name="button_mute_user">Mute User</string>

    <!-- EditText hints-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_new_comment">Add new comment…</string>
    <string name="hint_caption">Write opinion/suggestion/feedback etc</string>
    <string name="hint_city">City</string>
    <string name="hint_hashtag">#Candidate</string>

    <!-- Empty State labels-->
    <string name="empty_faves">No favorites found</string>
    <string name="empty_comments">No comments found</string>
    <string name="empty_notifications">No notifications found</string>
    <string name="empty_memes">No Post found</string>
    <string name="empty_reports">No reports found</string>

    <!-- Content Description-->
    <string name="content_image">image</string>
    <string name="content_image_button">image button</string>
    <string name="content_select_meme">Select post</string>

    <!-- Toolbar titles-->
    <string name="toolbar_edit_profile">Edit profile</string>
    <string name="toolbar_comments">Comments</string>
    <string name="toolbar_post_meme">Share post </string>
    <string name="toolbar_pending_memes">Pending Posts</string>
    <string name="toolbar_profile">Profile</string>
    <string name="toolbar_reports">Reports</string>

    <!-- Intent labels-->
    <string name="intent_invite_pals">Invite pals…</string>
    <string name="intent_dev_email">mailto: poojadhillon19june@gmail.com</string>
    <string name="intent_send_feedback">Send feedback</string>

    <!-- Links-->
    <string name="link_terms">https://sites.google.com/view/dankmemesapp/terms-and-conditions</string>
    <string name="link_privacy">https://www.magentoengineer.com/privacy-policy.php</string>

    <!-- mopub setup -->
    <string name="native_icon_image">native_icon_image</string>
    <string name="native_main_image">native_main_image</string>
    <string name="learn_more">Learn More</string>
    <string name="native_privacy_information_icon_image">Privacy Information Icon image</string>
    <string name="google_signin_key">334241399254-cql12nfn394579mkmpda7jss0rvs2nh3.apps.googleusercontent.com</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
