<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".ui.activities.PostMemeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/postToolbar"
        style="?android:actionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/color_primary_variant"
        android:elevation="1.2dp"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolbar_post_meme"
            android:textColor="@color/color_text_primary"
            android:textSize="18.2sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/postToolbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/postCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/hint_caption"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:overScrollMode="always"
                    android:padding="20dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:background="@drawable/white_box"
                    android:textColor="@color/color_text_primary"
                    android:textColorHint="@color/color_text_secondary"
                    android:layout_margin="10dp"
                    android:maxLength="1000"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/tagsLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/postCity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_box"
                        android:hint="Ward/Panchayat"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:lines="1"
                        android:padding="10dp"
                        android:layout_marginEnd="4dp"
                        android:textColor="@color/color_text_primary"
                        android:textColorHint="@color/color_text_secondary"
                        android:maxLength="250"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/postTag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/white_box"
                        android:hint="@string/hint_hashtag"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:lines="1"
                        android:padding="10dp"
                        android:layout_marginStart="4dp"
                        android:maxLength="500"
                        android:textColor="@color/color_text_primary"
                        android:textColorHint="@color/color_text_secondary"
                        android:textSize="15sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/postSelectImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_image"
                    android:scaleType="fitXY"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/postSelectVideo"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_image"
                    android:scaleType="fitXY"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/postAddImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/content_select_meme"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_image_add" />

            </LinearLayout>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>